@@ -35,14 +35,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.9</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.34.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -72,6 +69,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <profiles>
         <profile>
             <id>ci-test</id>
@@ -91,16 +89,15 @@
                 </plugins>
             </build>
         </profile>
-
-
-
     </profiles>
+
     <repositories>
         <repository>
             <id>openjfx-repo</id>
             <url>https://openjfx.io/maven-central/</url>
         </repository>
     </repositories>
+
     <build>
         <plugins>
             <plugin>
@@ -109,6 +106,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>org.habittracker.Main</mainClass>
+                    <options>
+                        <option>--add-modules=javafx.controls,javafx.fxml</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
